--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -29,9 +29,9 @@ find_package(Stb REQUIRED)
 
 add_definitions(-D_WIN)
 
-include_directories(AFTER src ../zewada/src)
-
 add_library(scripts SHARED ${SRC})
+
+target_include_directories(scripts PRIVATE src ../zewada/src)
 
 target_link_libraries(scripts PRIVATE zewada ${YAML_CPP_LIBRARIES} glm::glm Boost::filesystem yaml-cpp glfw glad::glad box2d::box2d)
 
