--- a/Debug/assets/nazo/ImGui/ImGUI.ini
+++ b/Debug/assets/nazo/ImGui/ImGUI.ini
@@ -57,7 +57,7 @@ DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,35 Size=1584,857 Split=X
       DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=434,444 Selected=0xE87781F4
       DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=434,411 Selected=0x2E9237F7
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=779,1037 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=569,494 CentralNode=1 Selected=0x90BB90E3
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=569,494 CentralNode=1 Selected=0x642CEEBB
       DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=569,361 Selected=0x197EBCEF
   DockNode      ID=0x00000004 Parent=0x33675C32 SizeRef=484,1037 Selected=0xE7039252
 
