--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -26,9 +26,9 @@ add_definitions(-D_WIN)
 
 add_executable(game ${SRC})
 
-target_include_directories(game PRIVATE ../zewada/src)
+target_include_directories(game PRIVATE ../zewada/src ${Stb_INCLUDE_DIR})
 
-target_link_libraries(game PRIVATE zewada ${YAML_CPP_LIBRARIES} glm::glm Boost::filesystem yaml-cpp glfw glad::glad box2d::box2d)
+target_link_libraries(game PRIVATE zewada ${YAML_CPP_LIBRARIES} glm::glm Boost::boost Boost::filesystem yaml-cpp glfw glad::glad box2d::box2d)
 
 
 target_precompile_headers(game PUBLIC ../zewada/src/zpch.h)
