--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -4,20 +4,15 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-project(scripts)
+#set executable directory
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../)
 
-set(EXPORT_COMPILE_COMMANDS ON)
+project(scripts)
 
 file(GLOB_RECURSE SRC
  "src/*.h"
  "src/*.cpp"
 )
-
-#enable intellisense in vs code
-set(EXPORT_COMPILE_COMMANDS ON)
-
-#set executable directory
-set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../)
 
 find_package(Boost 1.82.0 REQUIRED COMPONENTS filesystem)
 find_package(glfw3 CONFIG REQUIRED)
@@ -31,8 +26,8 @@ add_definitions(-D_WIN)
 
 add_library(scripts SHARED ${SRC})
 
-target_include_directories(scripts PRIVATE src ../zewada/src)
+target_include_directories(scripts PRIVATE src ../zewada/src ${Stb_INCLUDE_DIR})
 
-target_link_libraries(scripts PRIVATE zewada ${YAML_CPP_LIBRARIES} glm::glm Boost::filesystem yaml-cpp glfw glad::glad box2d::box2d)
+target_link_libraries(scripts PRIVATE zewada ${YAML_CPP_LIBRARIES} glm::glm Boost::boost Boost::filesystem yaml-cpp glfw glad::glad box2d::box2d)
 
 target_precompile_headers(scripts PUBLIC ../zewada/src/zpch.h)
