--- a/Debug/assets/nazo/ImGui/ImGUI.ini
+++ b/Debug/assets/nazo/ImGui/ImGUI.ini
@@ -10,54 +10,62 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=8,35
-Size=317,444
+Size=318,444
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Editor View]
-Pos=327,35
-Size=779,494
+Pos=328,35
+Size=776,482
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Game View]
-Pos=327,35
-Size=779,494
+Pos=328,35
+Size=776,482
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Inspector]
-Pos=1108,35
-Size=484,857
+Pos=1106,35
+Size=486,494
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000009,0
 
 [Window][Scene Hierarchy]
 Pos=8,481
-Size=317,411
+Size=318,411
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][AssetPanel]
-Pos=327,531
-Size=779,361
+Pos=328,519
+Size=776,373
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Terminal]
-Pos=327,531
-Size=779,361
+Pos=328,519
+Size=776,373
 Collapsed=0
 DockId=0x00000006,1
 
+[Window][GridPanel]
+Pos=1106,531
+Size=486,361
+Collapsed=0
+DockId=0x0000000B,0
+
 [Docking][Data]
 DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,35 Size=1584,857 Split=X
-  DockNode      ID=0x00000003 Parent=0x33675C32 SizeRef=1098,1037 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=317,1037 Split=Y Selected=0x2E9237F7
+  DockNode      ID=0x00000003 Parent=0x33675C32 SizeRef=1096,1037 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=318,1037 Split=Y Selected=0x2E9237F7
       DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=434,444 Selected=0xE87781F4
       DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=434,411 Selected=0x2E9237F7
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=779,1037 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=569,494 CentralNode=1 Selected=0x642CEEBB
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=569,361 Selected=0x9E25399C
-  DockNode      ID=0x00000004 Parent=0x33675C32 SizeRef=484,1037 Selected=0xE7039252
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=776,1037 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=569,482 CentralNode=1 Selected=0x90BB90E3
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=569,373 Selected=0x9E25399C
+  DockNode      ID=0x00000004 Parent=0x33675C32 SizeRef=486,1037 Split=Y Selected=0xE7039252
+    DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=484,494 Selected=0xE7039252
+    DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=484,361 Selected=0xED8DC8A7
 
