--- a/Debug/assets/nazo/ImGui/ImGUI.ini
+++ b/Debug/assets/nazo/ImGui/ImGUI.ini
@@ -64,7 +64,7 @@ DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,35 Size=1584,857 Split=X
       DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=434,411 Selected=0x2E9237F7
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=776,1037 Split=Y
       DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=569,482 CentralNode=1 Selected=0x90BB90E3
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=569,373 Selected=0x9E25399C
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=569,373 Selected=0x197EBCEF
   DockNode      ID=0x00000004 Parent=0x33675C32 SizeRef=486,1037 Split=Y Selected=0xE7039252
     DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=484,494 Selected=0xE7039252
     DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=484,361 Selected=0xED8DC8A7
