--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(glad CONFIG REQUIRED)
 find_package(yaml-cpp CONFIG REQUIRED)
 find_package(box2d CONFIG REQUIRED)
 find_package(Stb REQUIRED)
+find_package(OpenAL CONFIG REQUIRED)
 
 add_definitions(-D_WIN)
 
@@ -28,6 +29,6 @@ add_library(scripts SHARED ${SRC})
 
 target_include_directories(scripts PRIVATE src ../zewada/src ${Stb_INCLUDE_DIR})
 
-target_link_libraries(scripts PRIVATE zewada ${YAML_CPP_LIBRARIES} glm::glm Boost::boost Boost::filesystem yaml-cpp glfw glad::glad box2d::box2d)
+target_link_libraries(scripts PRIVATE zewada ${YAML_CPP_LIBRARIES} glm::glm Boost::boost Boost::filesystem yaml-cpp glfw glad::glad box2d::box2d OpenAL::OpenAL)
 
 target_precompile_headers(scripts PUBLIC ../zewada/src/zpch.h)
