--- a/Debug/assets/nazo/ImGui/ImGUI.ini
+++ b/Debug/assets/nazo/ImGui/ImGUI.ini
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=8,35
-Size=318,444
+Size=318,420
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Editor View]
 Pos=328,35
-Size=776,487
+Size=776,488
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Game View]
 Pos=328,35
-Size=776,487
+Size=776,488
 Collapsed=0
 DockId=0x00000005,1
 
@@ -33,20 +33,20 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene Hierarchy]
-Pos=8,481
-Size=318,411
+Pos=8,457
+Size=318,435
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][AssetPanel]
-Pos=328,524
-Size=776,368
+Pos=328,525
+Size=776,367
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Terminal]
-Pos=328,524
-Size=776,368
+Pos=328,525
+Size=776,367
 Collapsed=0
 DockId=0x00000006,1
 
@@ -60,11 +60,11 @@ DockId=0x0000000B,0
 DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,35 Size=1584,857 Split=X
   DockNode      ID=0x00000003 Parent=0x33675C32 SizeRef=1096,1037 Split=X
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=318,1037 Split=Y Selected=0x2E9237F7
-      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=434,444 Selected=0xE87781F4
-      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=434,411 Selected=0x2E9237F7
+      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=434,420 Selected=0xE87781F4
+      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=434,435 Selected=0x2E9237F7
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=776,1037 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=569,487 CentralNode=1 Selected=0x642CEEBB
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=569,368 Selected=0x9E25399C
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=569,488 CentralNode=1 Selected=0x642CEEBB
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=569,367 Selected=0x197EBCEF
   DockNode      ID=0x00000004 Parent=0x33675C32 SizeRef=486,1037 Split=Y Selected=0xE7039252
     DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=484,494 Selected=0xE7039252
     DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=484,361 Selected=0xED8DC8A7
