Box2d removed + bug fixes

--- a/Debug/assets/nazo/ImGui/ImGUI.ini
+++ b/Debug/assets/nazo/ImGui/ImGUI.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace]
 Pos=0,0
-Size=1600,900
+Size=3840,2054
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,62 +10,62 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=8,35
-Size=318,420
+Size=608,1144
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000003,0
 
 [Window][Editor View]
-Pos=328,35
-Size=776,488
-Collapsed=0
-DockId=0x00000005,0
-
-[Window][Game View]
-Pos=328,35
-Size=776,488
-Collapsed=0
-DockId=0x00000005,1
-
-[Window][Inspector]
-Pos=1106,35
-Size=486,494
+Pos=618,35
+Size=2544,1464
 Collapsed=0
 DockId=0x00000009,0
 
+[Window][Game View]
+Pos=618,35
+Size=2544,1464
+Collapsed=0
+DockId=0x00000009,1
+
+[Window][Inspector]
+Pos=3164,35
+Size=668,1144
+Collapsed=0
+DockId=0x00000007,0
+
 [Window][Scene Hierarchy]
-Pos=8,457
-Size=318,435
+Pos=8,1181
+Size=608,865
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][AssetPanel]
+Pos=618,1501
+Size=2544,545
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Terminal]
+Pos=618,1501
+Size=2544,545
+Collapsed=0
+DockId=0x0000000A,1
+
+[Window][GridPanel]
+Pos=3164,1181
+Size=668,865
 Collapsed=0
 DockId=0x00000008,0
 
-[Window][AssetPanel]
-Pos=328,525
-Size=776,367
-Collapsed=0
-DockId=0x00000006,0
-
-[Window][Terminal]
-Pos=328,525
-Size=776,367
-Collapsed=0
-DockId=0x00000006,1
-
-[Window][GridPanel]
-Pos=1106,531
-Size=486,361
-Collapsed=0
-DockId=0x0000000B,0
-
 [Docking][Data]
-DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,35 Size=1584,857 Split=X
-  DockNode      ID=0x00000003 Parent=0x33675C32 SizeRef=1096,1037 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=318,1037 Split=Y Selected=0x2E9237F7
-      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=434,420 Selected=0xE87781F4
-      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=434,435 Selected=0x2E9237F7
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=776,1037 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=569,488 CentralNode=1 Selected=0x642CEEBB
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=569,367 Selected=0x197EBCEF
-  DockNode      ID=0x00000004 Parent=0x33675C32 SizeRef=486,1037 Split=Y Selected=0xE7039252
-    DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=484,494 Selected=0xE7039252
-    DockNode    ID=0x0000000B Parent=0x00000004 SizeRef=484,361 Selected=0xED8DC8A7
+DockSpace       ID=0x85940918 Window=0x260A4489 Pos=8,35 Size=3824,2011 Split=X
+  DockNode      ID=0x00000005 Parent=0x85940918 SizeRef=3154,857 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=608,857 Split=Y Selected=0x5E5F7166
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=317,487 Selected=0x5E5F7166
+      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=317,368 Selected=0xB8729153
+    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=2544,857 Split=Y
+      DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=777,1464 CentralNode=1 Selected=0xAF90FBA5
+      DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=777,545 Selected=0x26197F25
+  DockNode      ID=0x00000006 Parent=0x85940918 SizeRef=668,857 Split=Y Selected=0x36DC96AB
+    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=486,487 Selected=0x36DC96AB
+    DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=486,368 Selected=0x75F5B884
 
