--- a/nazo/CMakeLists.txt
+++ b/nazo/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 project(nazo)
 
 #set executable directory
-set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../)
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../CMAKE_BUILD_TYPE)
 
 file(GLOB_RECURSE SRC
  "src/*.h"
@@ -19,7 +19,6 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(yaml-cpp CONFIG REQUIRED)
-find_package(box2d CONFIG REQUIRED)
 find_package(Stb REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 find_package(OpenAL CONFIG REQUIRED)
@@ -29,8 +28,13 @@ add_definitions(-D_WIN)
 
 add_executable(nazo ${SRC})
 
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_CURRENT_SOURCE_DIR}/../Debug
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../Release
+)
+
 target_include_directories(nazo PRIVATE src ../zewada/src ${Stb_INCLUDE_DIR})
 
-target_link_libraries(nazo PRIVATE zewada imgui::imgui ${YAML_CPP_LIBRARIES} Boost::boost Boost::filesystem glm::glm  yaml-cpp glfw glad::glad box2d::box2d OpenAL::OpenAL Freetype::Freetype)
+target_link_libraries(nazo PRIVATE zewada imgui::imgui ${YAML_CPP_LIBRARIES} Boost::boost Boost::filesystem glm::glm  yaml-cpp glfw glad::glad OpenAL::OpenAL Freetype::Freetype)
 
 target_precompile_headers(nazo PUBLIC ../zewada/src/zpch.h)
