--- a/zewada/CMakeLists.txt
+++ b/zewada/CMakeLists.txt
@@ -6,8 +6,6 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 project(zewada)
 
-set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../)
-
 #add packages from vcpkg
 #vcpkg install should run automatically before the cmake compilation
 find_package(Boost 1.82.0 REQUIRED COMPONENTS filesystem)
@@ -15,7 +13,6 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(yaml-cpp CONFIG REQUIRED)
-find_package(box2d CONFIG REQUIRED)
 find_package(Stb REQUIRED)
 find_package(OpenAL CONFIG REQUIRED) 
 find_package(Freetype REQUIRED)
@@ -30,9 +27,14 @@ include_directories(AFTER src)
  
 add_library(zewada STATIC ${SRC})
 
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_CURRENT_SOURCE_DIR}/../Debug
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../Release
+)
+
 target_include_directories(zewada PRIVATE ${Stb_INCLUDE_DIR})
 
-target_link_libraries(zewada PRIVATE ${YAML_CPP_LIBRARIES} Boost::boost Boost::filesystem glm::glm yaml-cpp glfw glad::glad box2d::box2d OpenAL::OpenAL Freetype::Freetype)
+target_link_libraries(zewada PRIVATE ${YAML_CPP_LIBRARIES} Boost::boost Boost::filesystem glm::glm yaml-cpp glfw glad::glad OpenAL::OpenAL Freetype::Freetype)
 
 target_precompile_headers(zewada PUBLIC src/zpch.h)
 
